--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Covid19 India
+        SARS-CoV-2 India
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="language" content="en" />
