--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>
-        SARS-CoV-2 India
+      SARS-CoV-2 India
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="language" content="en" />
     <meta charset="utf-8" />
-    <meta name="viewport"
-        content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1" />
+    <meta
+      name="viewport"
+      content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1"
+    />
+  </head>
 
-</head>
-
-<body>
-    <div id='app'></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
