--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>
-      SARS-CoV-2 India
-    </title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="language" content="en" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1"
-    />
-  </head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <title>
+    SARS-CoV-2 India
+  </title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="language" content="en" />
+  <meta charset="utf-8" />
+  <meta name="viewport"
+    content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js"
+    integrity="sha256-OI3N9zCKabDov2rZFzl8lJUXCcP7EmsGcGoP6DMXQCo=" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
