--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <title>
-      SARS-CoV-2 India
-    </title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="language" content="en" />
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1"
-    />
-  </head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <title>
+    SARS-CoV-2 India
+  </title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="language" content="en" />
+  <meta charset="utf-8" />
+  <meta name="viewport"
+    content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1" />
+  <meta name="keywords" content="covid19 India, SARS-CoV-2 india ,
+    covid19 SARS-CoV-2 location details, 
+    covid19 SARS-CoV-2 location district details,
+    covid19 SARS-CoV-2 location city details,
+    covid19 SARS-CoV-2 location state details,
+    real time location push notification
+    ">
+  <meta name="description" content="Get covid19 SARS-CoV-2 data based on your current location,
+   watch cities and state which you prefer, 
+   get real time notification for your location for covid19 recovered deaths active patients changes">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60522635-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-60522635-3');
+  </script>
+
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
