--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <title>
     SARS-CoV-2 India
   </title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="language" content="en" />
   <meta charset="utf-8" />
   <meta name="viewport"
@@ -16,21 +15,22 @@
     covid19 SARS-CoV-2 location city details,
     covid19 SARS-CoV-2 location state details,
     real time location push notification
-    ">
+    " />
   <meta name="description" content="Get covid19 SARS-CoV-2 data based on your current location,
    watch cities and state which you prefer, 
-   get real time notification for your location for covid19 recovered deaths active patients changes">
+   get real time notification for your location for covid19 recovered deaths active patients changes" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60522635-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-60522635-3');
   </script>
-
 </head>
 
 <body>
