--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <title>
-    SARS-CoV-2 India
-  </title>
-  <meta http-equiv="language" content="en" />
-  <meta charset="utf-8" />
-  <meta name="viewport"
-    content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1" />
-  <meta name="keywords" content="covid19 India, SARS-CoV-2 india ,
+  <head>
+    <title>
+      SARS-CoV-2 India:Latest Counts
+    </title>
+    <meta http-equiv="language" content="en" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="initial-scale=1, shrink-to-fit=no,user-scalable=no, width=device-width, maximum-scale=1"
+    />
+    <meta
+      name="keywords"
+      content="covid19 India, SARS-CoV-2 india ,
     covid19 SARS-CoV-2 location details, 
     covid19 SARS-CoV-2 location district details,
     covid19 SARS-CoV-2 location city details,
     covid19 SARS-CoV-2 location state details,
     real time location push notification
-    " />
-  <meta name="description" content="Get covid19 SARS-CoV-2 data based on your current location,
-   watch cities and state which you prefer, 
-   get real time notification for your location for covid19 recovered deaths active patients changes" />
+    "
+    />
+    <meta
+      name="description"
+      content="Details about covid19 SARS-CoV-2 outbreak in India district and state wise,
+  Active recovered deaths count of your location,
+  covid19 SARS-CoV-2 data based on your current location,
+  covid19 SARS-CoV-2 data of your city and state 
+  push notification for changes in covid19 details."
+    />
+    <link
+      rel="preconnect"
+      href="https://www.google-analytics.com"
+      crossorigin
+    />
+    <link
+      rel="preconnect"
+      href="https://www.googletagmanager.com/"
+      crossorigin
+    />
+    <link rel="preconnect" href="https://covid2.in/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://covid2.in" />
+    <meta property="og:title" content="SARS-CoV-2 India:Latest Counts" />
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60522635-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+    <meta
+      property="og:description"
+      content="Details about covid19 SARS-CoV-2 outbreak in India district and state wise,
+  Active recovered deaths count of your location,
+  covid19 SARS-CoV-2 data based on your current location,
+  covid19 SARS-CoV-2 data of your city and state 
+  push notification for changes in covid19 details."
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-60522635-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-    gtag('config', 'UA-60522635-3');
-  </script>
-</head>
+      gtag('config', 'UA-60522635-3');
+    </script>
+  </head>
 
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
